--- a/index.html
+++ b/index.html
@@ -1,11 +1,384 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Food</h1>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Lilly May's Desserts - Asheville</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-klassy-cafe.css" />
+    <link rel="stylesheet" href="assets/css/owl-carousel.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
+  </head>
+
+  <body>
+    <!-- ***** Header Area Start ***** -->
+    <header class="header-area header-sticky">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="index.html" class="logo">
+                <img
+                  src="assets/images/logo-text.jpg"
+                  width="200px"
+                />
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li class="scroll-to-section">
+                  <a href="#top" class="active">Home</a>
+                </li>
+                <li class="scroll-to-section"><a href="#about">About</a></li>
+
+                <!-- 
+                            <li class="submenu">
+                                <a href="javascript:;">Drop Down</a>
+                                <ul>
+                                    <li><a href="#">Drop Down Page 1</a></li>
+                                    <li><a href="#">Drop Down Page 2</a></li>
+                                    <li><a href="#">Drop Down Page 3</a></li>
+                                </ul>
+                            </li>
+                        -->
+                <li class="scroll-to-section"><a href="#offers">Menu</a></li>
+                <li class="scroll-to-section">
+                  <a href="#reservation">Contact Us</a>
+                </li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- ***** Header Area End ***** -->
+
+    <!-- ***** Main Banner Area Start ***** -->
+    <div id="top">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="left-content">
+              <div class="inner-content">
+                <h4>Lilly May's</h4>
+                <h6>Desserts</h6>
+                <div class="main-white-button scroll-to-section">
+                  <a href="#reservation">Contact Us</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <img src="assets/images/header.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ***** Main Banner Area End ***** -->
+
+    <!-- ***** About Area Starts ***** -->
+    <section class="section" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-xs-12">
+            <div class="left-text-content">
+              <div class="section-heading">
+                <h6>About Us</h6>
+                <h2>Satisfying desserts to your door</h2>
+              </div>
+              <p>
+                Heather May is a something something. <br /><br /> Eat more things.
+              </p>
+              <div class="row">
+                <div class="col-4">
+                  <img src="assets/images/about-thumb-01.jpg" alt="" />
+                </div>
+                <div class="col-4">
+                  <img src="assets/images/about-thumb-02.jpg" alt="" />
+                </div>
+                <div class="col-4">
+                  <img src="assets/images/about-thumb-03.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-xs-12">
+            <div class="right-content">
+              <div class="thumb">
+                <a rel="nofollow" href="http://youtube.com"
+                  ><i class="fa fa-play"></i
+                ></a>
+                <img src="assets/images/about-video-bg.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ***** About Area Ends ***** -->
+
+    <!-- ***** Menu Area Starts ***** -->
+    <section class="section" id="offers">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 offset-lg-4 text-center">
+              <div class="section-heading">
+                <h2>Menu</h2>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="row" id="tabs">
+                <div class="col-lg-12">
+                  <section class="tabs-content">
+                    <article id="tabs-1">
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="row">
+                            <div class="left-list">
+                              <div class="col-lg-12">
+                                <div class="tab-item">
+                                  <img
+                                    src="assets/images/tab-item-01.png"
+                                    alt=""
+                                  />
+                                  <h4>Fresh Chicken Salad</h4>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur koit
+                                    adipiscing elit, sed do.
+                                  </p>
+                                  <div class="price">
+                                    <h6>$10.50</h6>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-lg-12">
+                                <div class="tab-item">
+                                  <img
+                                    src="assets/images/tab-item-02.png"
+                                    alt=""
+                                  />
+                                  <h4>Orange Juice</h4>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur koit
+                                    adipiscing elit, sed do.
+                                  </p>
+                                  <div class="price">
+                                    <h6>$8.50</h6>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-lg-12">
+                                <div class="tab-item">
+                                  <img
+                                    src="assets/images/tab-item-03.png"
+                                    alt=""
+                                  />
+                                  <h4>Fruit Salad</h4>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur koit
+                                    adipiscing elit, sed do.
+                                  </p>
+                                  <div class="price">
+                                    <h6>$9.90</h6>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="row">
+                            <div class="right-list">
+                              <div class="col-lg-12">
+                                <div class="tab-item">
+                                  <img
+                                    src="assets/images/tab-item-04.png"
+                                    alt=""
+                                  />
+                                  <h4>Eggs Omelette</h4>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur koit
+                                    adipiscing elit, sed do.
+                                  </p>
+                                  <div class="price">
+                                    <h6>$6.50</h6>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-lg-12">
+                                <div class="tab-item">
+                                  <img
+                                    src="assets/images/tab-item-05.png"
+                                    alt=""
+                                  />
+                                  <h4>Dollma Pire</h4>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur koit
+                                    adipiscing elit, sed do.
+                                  </p>
+                                  <div class="price">
+                                    <h6>$5.00</h6>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-lg-12">
+                                <div class="tab-item">
+                                  <img
+                                    src="assets/images/tab-item-06.png"
+                                    alt=""
+                                  />
+                                  <h4>Omelette & Cheese</h4>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur koit
+                                    adipiscing elit, sed do.
+                                  </p>
+                                  <div class="price">
+                                    <h6>$4.10</h6>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </article>
+                  </section>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    <!-- ***** Reservation Us Area Starts ***** -->
+    <section class="section" id="reservation">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 align-self-center">
+            <div class="left-text-content">
+              <div class="section-heading">
+                <h6>Contact Us</h6>
+                <h2>
+                  Contact us for catering options
+                </h2>
+              </div>
+              <p>
+                Donec pretium est orci, non vulputate arcu hendrerit a. Fusce a
+                eleifend riqsie, namei sollicitudin urna diam, sed commodo purus
+                porta ut.
+              </p>
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="phone">
+                    <i class="fa fa-phone"></i>
+                    <h4>Phone Numbers</h4>
+                    <span
+                      ><a href="#">080-090-0990</a><br /><a href="#"
+                        >080-090-0880</a
+                      ></span
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="message">
+                    <i class="fa fa-envelope"></i>
+                    <h4>Emails</h4>
+                    <span
+                      ><a href="#">hello@company.com</a><br /><a href="#"
+                        >info@company.com</a
+                      ></span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ***** Reservation Area Ends ***** -->
+
+    <!-- ***** Footer Start ***** -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-xs-12">
+            <div class="right-text-content">
+              <ul class="social-icons">
+                <li>
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4">
+          </div>
+          <div class="col-lg-4 col-xs-12">
+            <div class="left-text-content">
+              <p>
+                © Copyright Lilly May's LLC.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="assets/js/jquery-2.1.0.min.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="assets/js/popper.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    <!-- Plugins -->
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/accordions.js"></script>
+    <script src="assets/js/datepicker.js"></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
+    <script src="assets/js/waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
+    <script src="assets/js/imgfix.min.js"></script>
+    <script src="assets/js/slick.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/isotope.js"></script>
+
+    <!-- Global Init -->
+    <script src="assets/js/custom.js"></script>
+  </body>
 </html>
