--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       href="assets/css/bootstrap.min.css"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
-    <link rel="stylesheet" href="assets/css/templatemo-klassy-cafe.css" />
-    <link rel="stylesheet" href="assets/css/owl-carousel.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
   </head>
 
@@ -367,16 +366,10 @@
     <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/accordions.js"></script>
-    <script src="assets/js/datepicker.js"></script>
     <script src="assets/js/scrollreveal.min.js"></script>
     <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
     <script src="assets/js/imgfix.min.js"></script>
-    <script src="assets/js/slick.js"></script>
     <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/isotope.js"></script>
 
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
