--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Lilly May's Desserts - Asheville</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -8,6 +9,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
@@ -17,7 +19,6 @@
       rel="stylesheet"
     />
 
-    <title>Lilly May's Desserts - Asheville</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -25,7 +26,6 @@
     />
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/lightbox.css" />
   </head>
 
   <body>
@@ -37,10 +37,7 @@
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
-                <img
-                  src="assets/images/logo-text.jpg"
-                  width="200px"
-                />
+                <img src="assets/images/logo-text.jpg" width="200px" />
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
@@ -110,7 +107,15 @@
                 <h2>Satisfying desserts to your door</h2>
               </div>
               <p>
-                Heather May is a something something. <br /><br /> Eat more things.
+                Lilly May's is committed to offering large and small format hand
+                crafted desserts made from locally sourced and sustainable
+                ingredients by passionate human beings. Lilly May's is here to
+                make your special occasion that much more special with a little
+                something sweet. Whether you are having a formal office brunch
+                and need coffee service and pastries, a lavish wedding with a
+                large dessert table, or a baby shower brunch with yogurt jars
+                and cupcakes, we are here to provide you with the highest
+                quality sweets and the highest quality service.
               </p>
               <div class="row">
                 <div class="col-4">
@@ -128,10 +133,7 @@
           <div class="col-lg-6 col-md-6 col-xs-12">
             <div class="right-content">
               <div class="thumb">
-                <a rel="nofollow" href="http://youtube.com"
-                  ><i class="fa fa-play"></i
-                ></a>
-                <img src="assets/images/about-video-bg.jpg" alt="" />
+                <img src="assets/images/heather.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -142,138 +144,138 @@
 
     <!-- ***** Menu Area Starts ***** -->
     <section class="section" id="offers">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 offset-lg-4 text-center">
-              <div class="section-heading">
-                <h2>Menu</h2>
-              </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 offset-lg-4 text-center">
+            <div class="section-heading">
+              <h2>Menu</h2>
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="row" id="tabs">
-                <div class="col-lg-12">
-                  <section class="tabs-content">
-                    <article id="tabs-1">
-                      <div class="row">
-                        <div class="col-lg-6">
-                          <div class="row">
-                            <div class="left-list">
-                              <div class="col-lg-12">
-                                <div class="tab-item">
-                                  <img
-                                    src="assets/images/tab-item-01.png"
-                                    alt=""
-                                  />
-                                  <h4>Fresh Chicken Salad</h4>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur koit
-                                    adipiscing elit, sed do.
-                                  </p>
-                                  <div class="price">
-                                    <h6>$10.50</h6>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-lg-12">
-                                <div class="tab-item">
-                                  <img
-                                    src="assets/images/tab-item-02.png"
-                                    alt=""
-                                  />
-                                  <h4>Orange Juice</h4>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur koit
-                                    adipiscing elit, sed do.
-                                  </p>
-                                  <div class="price">
-                                    <h6>$8.50</h6>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-lg-12">
-                                <div class="tab-item">
-                                  <img
-                                    src="assets/images/tab-item-03.png"
-                                    alt=""
-                                  />
-                                  <h4>Fruit Salad</h4>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur koit
-                                    adipiscing elit, sed do.
-                                  </p>
-                                  <div class="price">
-                                    <h6>$9.90</h6>
-                                  </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row" id="tabs">
+              <div class="col-lg-12">
+                <section class="tabs-content">
+                  <article id="tabs-1">
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <div class="row">
+                          <div class="left-list">
+                            <div class="col-lg-12">
+                              <div class="tab-item">
+                                <img
+                                  src="assets/images/tab-item-01.png"
+                                  alt=""
+                                />
+                                <h4>Fresh Chicken Salad</h4>
+                                <p>
+                                  Lorem ipsum dolor sit amet, consectetur koit
+                                  adipiscing elit, sed do.
+                                </p>
+                                <div class="price">
+                                  <h6>$10.50</h6>
                                 </div>
                               </div>
                             </div>
-                          </div>
-                        </div>
-                        <div class="col-lg-6">
-                          <div class="row">
-                            <div class="right-list">
-                              <div class="col-lg-12">
-                                <div class="tab-item">
-                                  <img
-                                    src="assets/images/tab-item-04.png"
-                                    alt=""
-                                  />
-                                  <h4>Eggs Omelette</h4>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur koit
-                                    adipiscing elit, sed do.
-                                  </p>
-                                  <div class="price">
-                                    <h6>$6.50</h6>
-                                  </div>
+                            <div class="col-lg-12">
+                              <div class="tab-item">
+                                <img
+                                  src="assets/images/tab-item-02.png"
+                                  alt=""
+                                />
+                                <h4>Orange Juice</h4>
+                                <p>
+                                  Lorem ipsum dolor sit amet, consectetur koit
+                                  adipiscing elit, sed do.
+                                </p>
+                                <div class="price">
+                                  <h6>$8.50</h6>
                                 </div>
                               </div>
-                              <div class="col-lg-12">
-                                <div class="tab-item">
-                                  <img
-                                    src="assets/images/tab-item-05.png"
-                                    alt=""
-                                  />
-                                  <h4>Dollma Pire</h4>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur koit
-                                    adipiscing elit, sed do.
-                                  </p>
-                                  <div class="price">
-                                    <h6>$5.00</h6>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-lg-12">
-                                <div class="tab-item">
-                                  <img
-                                    src="assets/images/tab-item-06.png"
-                                    alt=""
-                                  />
-                                  <h4>Omelette & Cheese</h4>
-                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur koit
-                                    adipiscing elit, sed do.
-                                  </p>
-                                  <div class="price">
-                                    <h6>$4.10</h6>
-                                  </div>
+                            </div>
+                            <div class="col-lg-12">
+                              <div class="tab-item">
+                                <img
+                                  src="assets/images/tab-item-03.png"
+                                  alt=""
+                                />
+                                <h4>Fruit Salad</h4>
+                                <p>
+                                  Lorem ipsum dolor sit amet, consectetur koit
+                                  adipiscing elit, sed do.
+                                </p>
+                                <div class="price">
+                                  <h6>$9.90</h6>
                                 </div>
                               </div>
                             </div>
                           </div>
                         </div>
                       </div>
-                    </article>
-                  </section>
-                </div>
+                      <div class="col-lg-6">
+                        <div class="row">
+                          <div class="right-list">
+                            <div class="col-lg-12">
+                              <div class="tab-item">
+                                <img
+                                  src="assets/images/tab-item-04.png"
+                                  alt=""
+                                />
+                                <h4>Eggs Omelette</h4>
+                                <p>
+                                  Lorem ipsum dolor sit amet, consectetur koit
+                                  adipiscing elit, sed do.
+                                </p>
+                                <div class="price">
+                                  <h6>$6.50</h6>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-lg-12">
+                              <div class="tab-item">
+                                <img
+                                  src="assets/images/tab-item-05.png"
+                                  alt=""
+                                />
+                                <h4>Dollma Pire</h4>
+                                <p>
+                                  Lorem ipsum dolor sit amet, consectetur koit
+                                  adipiscing elit, sed do.
+                                </p>
+                                <div class="price">
+                                  <h6>$5.00</h6>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-lg-12">
+                              <div class="tab-item">
+                                <img
+                                  src="assets/images/tab-item-06.png"
+                                  alt=""
+                                />
+                                <h4>Omelette & Cheese</h4>
+                                <p>
+                                  Lorem ipsum dolor sit amet, consectetur koit
+                                  adipiscing elit, sed do.
+                                </p>
+                                <div class="price">
+                                  <h6>$4.10</h6>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </section>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
     <!-- ***** Reservation Us Area Starts ***** -->
     <section class="section" id="reservation">
@@ -283,9 +285,7 @@
             <div class="left-text-content">
               <div class="section-heading">
                 <h6>Contact Us</h6>
-                <h2>
-                  Contact us for catering options
-                </h2>
+                <h2>Contact us for catering options</h2>
               </div>
               <p>
                 Donec pretium est orci, non vulputate arcu hendrerit a. Fusce a
@@ -345,13 +345,10 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-4">
-          </div>
+          <div class="col-lg-4"></div>
           <div class="col-lg-4 col-xs-12">
             <div class="left-text-content">
-              <p>
-                © Copyright Lilly May's LLC.
-              </p>
+              <p>© Copyright Lilly May's LLC.</p>
             </div>
           </div>
         </div>
@@ -362,14 +359,11 @@
     <script src="assets/js/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
     <script src="assets/js/scrollreveal.min.js"></script>
     <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/imgfix.min.js"></script>
-    <script src="assets/js/lightbox.js"></script>
 
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
